--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>Hello</h2>
+    <section class="lt-lorem-text">
+        <div class="lt-container">
+            <h2>tired of boring lorem ipsum</h2>
+            <form class="lt-form">
+                <label for="para">paragraphs</label>
+                <input type="number" name="amount" id="amount" placeholder="e.g. 5">
+            </form>
+            <article class="lt-lorem-text">
+                
+            </article>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
