--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="lt-lorem-text">
+    <section class="lt-lorem">
         <div class="lt-container">
             <h2>tired of boring lorem ipsum</h2>
             <form class="lt-form">
-                <label for="para">paragraphs</label>
-                <input type="number" name="amount" id="amount" placeholder="e.g. 5">
+                <label for="para">paragraphs: </label>
+                <input type="number" name="amount" id="amount" placeholder="e.g. 5" autocomplete="off">
+                <input type="submit" value="generate" class="lt-btn">
             </form>
             <article class="lt-lorem-text">
-                
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum at et, error ratione culpa sunt modi repellendus suscipit mollitia nemo quasi ad, voluptatem soluta reiciendis necessitatibus fugiat totam obcaecati! Veniam officia quos ratione dolor eaque adipisci eos deleniti error fugiat!
             </article>
         </div>
     </section>
