--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
                 <input type="number" name="amount" id="amount" placeholder="e.g. 5" autocomplete="off">
                 <input type="submit" value="generate" class="lt-btn">
             </form>
-            <article class="lt-lorem-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum at et, error ratione culpa sunt modi repellendus suscipit mollitia nemo quasi ad, voluptatem soluta reiciendis necessitatibus fugiat totam obcaecati! Veniam officia quos ratione dolor eaque adipisci eos deleniti error fugiat!
-            </article>
+            <article class="lt-lorem-text">Your paragraph will be shown here</article>
         </div>
     </section>
     <script src="js/script.js"></script>
